--- a/src/work/2020-01-01-hoojook.md
+++ b/src/work/2020-01-01-hoojook.md
@@ -1,5 +1,5 @@
 ---
-title: hoojook INC (RimTim Technologies)
+title: hoojook 
 body_class: work
 excerpt: I worked on SEO (On-page, Off-page, and Technical SEO) for client's website. I also worked on Content marketing for the company's product named RimTim and ReviewKeg.
 highlightjs: true
