Added Plutomen work exp
Added Plutomen image and work experience

--- a/src/work/2016-01-01-simform.md
+++ b/src/work/2016-01-01-simform.md
@@ -3,7 +3,7 @@ title: Simform
 body_class: work
 excerpt: I worked on different Digital marketing campaigns that includes SEO, Content marketing, Social media promotions, and Account-based marketing.
 highlightjs: true
-year: 2017 - present
+year: 2017 - 2022
 ---
 
 I joined Simform in October 2017 as an inbound marketing executive. I worked under my team lead to execute content marketing and SEO campaigns for different technology verticals. To put it succinctly, I worked on content, SEO, link-building, and online reputation management. 
