Deleted about image

--- a/src/work/2022-08-01-plutomen.md
+++ b/src/work/2022-08-01-plutomen.md
@@ -6,7 +6,7 @@ highlightjs: true
 year: 2022 - present
 ---
 
-I joined Plutomen as Demand Generation Manager on August 2022. At Plutomen, I am spearheading a team of SEO, Content Marketing by building Content Marketing funnels. Additionaly, I am managing Social Media and Paid campaigns to generate MQLs for three in-house products. I am also handling marketing automation sequences and drip email marketing sequences for the company. 
+I joined Plutomen as Demand Generation Manager on August 2022. At Plutomen, I am spearheading a team of SEO, Content Marketing by building Content Marketing funnels. Additionaly, I am managing Social Media and Paid campaigns to generate MQLs for three in-house products. I am also handling marketing automation sequences and drip email marketing sequences for the company
 
 ---
 
