--- a/src/work/2016-01-01-simform.md
+++ b/src/work/2016-01-01-simform.md
@@ -8,11 +8,11 @@ year: 2017 - 2022
 
 I joined Simform in October 2017 as an inbound marketing executive. I worked under my team lead to execute content marketing and SEO campaigns for different technology verticals. To put it succinctly, I worked on content, SEO, link-building, and online reputation management. 
 
-Additionaly, I spearheaded a location-based website and generated leads through SEO and content marketing tactics.  After a few years, in 2020, I got promoted as Campaign Manager. As a part of my work, I implemented complete end-to-end Digital marketing funnels that include SEO, Content-marketing, Facebook/ Linkedin marketing, and Account-based marketing. 
+Additionaly, I spearheaded a location-based website and generated leads through SEO and content marketing tactics.  After a few years, in 2020, I got promoted as Demand Generation Lead. As a part of my work, I implemented complete end-to-end Digital marketing funnels that include SEO, Content-marketing, Facebook/ Linkedin marketing, and Account-based marketing (Linkedin and Emails). 
 
 ---
 
-## My work description at Simform as Sr. Campaign Manager
+## My work description at Simform as Demand Generation Lead
 
 Responsible for conceptualizing, execution, tracking, and reporting of digital marketing campaigns.
 
