--- a/src/work/2022-08-01-plutomen.md
+++ b/src/work/2022-08-01-plutomen.md
@@ -1,12 +1,150 @@
 ---
-title: Plutomen
+title: Plutomen Technologies – Establishing Demand Generation & Product Positioning for XR SaaS
+meta_title: Plutomen
 body_class: work
-excerpt: I am working as a Demand Generation Manager at Plutomen where I am incharge of handling all sorts of activities like SEO, Content Marketing, Social Media advertising, Marketing Automation, Email marketing, Webinars, etc. 
+excerpt: Before I joined, Plutomen had launched a MVP with a bit of product-market fit. However, the main business was more focused on XR services instead of product. 
 highlightjs: true
-year: 2022 - present
+year: Sept 2022 - Sept 2024
 ---
 
-I joined Plutomen as Demand Generation Manager on August 2022. At Plutomen, I am spearheading a team of SEO, Content Marketing by building Content Marketing funnels. Additionaly, I am managing Social Media and Paid campaigns to generate MQLs for three in-house products. I am also handling marketing automation sequences and drip email marketing sequences for the company
+<!-- Custom / Tailwind CSS Imports -->
+<link href="path/to/tailwind.css" rel="stylesheet">
+<link href="custom/typography.css" rel="stylesheet">
+<link href="custom/header-footer.css" rel="stylesheet">
+<link href="custom/home.css" rel="stylesheet">
+<link href="custom/bio.css" rel="stylesheet">
+<link href="custom/misc.css" rel="stylesheet">
+<link href="custom/highlightjs.css" rel="stylesheet">
+
+<style>
+/* Share button CSS you provided */
+.resp-sharing-button__link,
+.resp-sharing-button__icon { display: inline-block; }
+.resp-sharing-button__link { text-decoration: none; color: #fff; margin: 0.5em; }
+.resp-sharing-button { border-radius: 5px; transition: 25ms ease-out; padding: 0.5em 0.75em; font-family: Helvetica Neue,Helvetica,Arial,sans-serif; }
+#share-buttons img { width: 35px; padding: 5px; border: 0; box-shadow: 0; display: inline; }
+.resp-sharing-button__icon svg { width: 1em; height: 1em; margin-right: 0.4em; vertical-align: top; }
+.resp-sharing-button--small svg { margin: 0; vertical-align: middle; }
+.resp-sharing-button__icon { stroke: #fff; fill: none; }
+.resp-sharing-button__icon--solid, .resp-sharing-button__icon--solidcircle { fill: #fff; stroke: none; }
+.resp-sharing-button--twitter { background-color: #55acee; border-color: #55acee; }
+.resp-sharing-button--twitter:hover, .resp-sharing-button--twitter:active { background-color: #2795e9; border-color: #2795e9; }
+/* ...other platforms as in your original CSS... */
+</style>
+
+<body class="bg-white text-gray-900">
+
+
+  <!-- Intro Section -->
+  <section class="intro text-center space-y-4">
+    <img src="/assets/img/Plutomen Logo New.png" alt="Plutomen logo" class="mx-auto h-16">
+    <p class="uppercase text-sm text-blue-600">DeepTech (XR/AR/VR) Company, SaaS</p>
+    <p>Plutomen Technologies offers an XR-powered Connected Worker Platform, enabling frontline workers in manufacturing and industrial sectors to access AR-based remote assistance, guided workflows, and digital work instructions to reduce downtime and improve productivity. Before I joined, Plutomen had launched a MVP with a bit of product-market fit (a few users). However, the main business was more focused on XR services instead of product. This was spread thin across their website positioning too. My main responsibility was to reposition the website from a service company to product company along with setting up the demand gen motion.  </p>
+    
+  </section>
+
+  <!-- Results -->
+  <h2 class="text-3xl font-semibold mb-4">The Results</h2>
+  <section class="work-section work-section--misc max-w-4xl p-16 mt-24 flex items-start self-center relative sm:p-8 sm:mt-12  sm:flex-col-reverse">
+    <div style="display: flex; flex-wrap: wrap; justify-content: center; max-width: 800px; margin: 0 auto; text-align: center; gap: 20px;">
+
+  <div style="flex: 1 1 45%; padding: 20px; border: 1px solid #ccc; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+    <h3 style="margin: 0; font-size: 24px; color: #0056b3;">Over 200+</h3>
+    <p style="margin: 5px 0 0;">Increase in Marketing Qualified Leads</p>
+  </div>
+
+  <div style="flex: 1 1 45%; padding: 20px; border: 1px solid #ccc; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+    <h3 style="margin: 0; font-size: 24px; color: #0056b3;">+30%</h3>
+    <p style="margin: 5px 0 0;">Increase in Branded Search Visibility from Zero Baseline</p>
+  </div>
+
+  <div style="flex: 1 1 45%; padding: 20px; border: 1px solid #ccc; border-radius: 12px; box-shadow: 0 2px 6px rgba(0,0,0,0.1);">
+    <h3 style="margin: 0; font-size: 24px; color: #0056b3;">$250k</h3>
+    <p style="margin: 5px 0 0;">Attributed towards Successful Marketing Pipeline</p>
+  </div>
+
+
+</div>
+
+  </section>
+
+  <!-- Challenge -->
+  <section class="challenge space-y-4">
+    <h3 class="text-2xl font-semibold">The Challenge</h3>
+    <p>Before I joined, Plutomen was primarily focused on selling XR services to a PAN India and Middle East audience. The company had built a robust XR platform already used by a few large clients but lacked a structured product-focused GTM strategy.
+
+After raising $600k to build marketing and sales functions, Plutomen needed to transition from a service-led model to a scalable product-led SaaS business. They had no structured demand generation, positioning, or repeatable pipeline engine to support enterprise sales.
+
+I joined as Plutomen’s first marketing hire, starting as an individual contributor, and over time, built and led a team of 2 to execute a scalable GTM and demand generation strategy. </p>
+
+  </section>
+
+  <!-- Goals -->
+  <section class="goals space-y-4">
+    <h3 class="text-2xl font-semibold">The Objectives</h3>
+    <p>Collaborating with the CEO and Head of Sales, I aimed to:</p>
+    <ol>
+      <li>Define clear ICPs and positioning for manufacturing and industrial segments.</li>
+
+<li>Establish paid & ABM campaigns to capture high-intent demand.</li>
+
+<li>Build marketing automation workflows to nurture SMB's and Enterprise opportunities.</li>
+
+<li>Support sales team with oubound cold email function with Apollo.io and events prospecting.</li>
+
+<li>Build a repeatable, data-driven demand generation engine with positive ROI.</li>
+    </ol>
+  </section>
+
+  <!-- Solution -->
+  <section class="solution space-y-4">
+    <h3 class="text-2xl font-semibold">Key Actions Performed</h3>
+    <ul class="round">
+      <li> ICP & Buyer Journey Mapping: Identified ideal industrial sectors, refining messaging for plant heads, VP of Digital Transformation, maintenance managers, and COOs.</li>
+      <li> Content Strategy: Developed high-quality case studies, whitepapers, and AR/VR-focused blog content targeting connected worker and frontline productivity keywords.</li>
+      <li>Website Optimization: Refreshed website positioning, optimized key pages for search, and implemented conversion-focused CTAs.</li>
+      <li>SEO Strategy: Conducted keyword research, optimized technical SEO, and implemented a content calendar.</li>
+      <li> Paid Ads: Ran LinkedIn and Google Ads targeting AR/VR and connected worker use cases for enterprises.</li>
+      <li>Marketing Automation: Implemented Freshsales for markting and sales lead tracking, nurturing workflows, and lead scoring.</li>
+      <li>Performance Analytics: Set up GA4, dashboards, and monthly reporting to track MQLs and pipeline impact.</li>
+      <li> Outbound Email Campaigns: Assisted sales with iterative cold outbound sequences with personalization. (Atleast 3000 Emails Per Month)</li>
+    </ul>
+  </section>
+
+  <!-- About -->
+  <section class="about space-y-4">
+    <h3 class="text-2xl font-semibold">About Plutomen</h3>
+    <p>Plutomen Technologies offers an XR-powered Connected Worker Platform, enabling frontline workers in manufacturing and industrial sectors to access AR-based remote assistance, guided workflows, and digital work instructions to reduce assets/machine downtime and improve productivity.</p>
+   
+  </section>
+
+  <!-- Other Case Studies -->
+  <section class="other-case-studies space-y-6">
+    <h3 class="text-2xl font-semibold">More Work Experiences</h3>
+    <div class="grid grid-cols-1 sm:grid-cols-3 gap-6">
+      <!-- Plutomen -->
+      <div class="case-study-card border rounded-lg overflow-hidden">
+       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="simform" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Plutomen_trans.png"></img>
+        <div class="px-4 py-2">
+          <h4 class="font-semibold">Plutomen Technologies</h4>
+          <p>Spearheading entire GTM strategy for an XR powered Connected Worker Platform</p>
+        </div>
+      </div>
+      <!-- Simform -->
+      <div class="case-study-card border rounded-lg overflow-hidden">
+       <img class="flex-shrink-0 mr-12 sm:mb-4" loading="lazy" alt="simform" width="96" height="74" viewBox="0 0 96 74" fill="none" src="/assets/img/Simform.png"></img>
+        <div class="px-4 py-2">
+          <h4 class="font-semibold">Simform</h4>
+          <p>Marketing for a Software Product Development Company</p>
+        </div>
+      </div>
+    <a href="/work" class="text-blue-500 hover:underline">← Back to All Work Experiences</a>
+  </section>
+
+</main>
+
+</body>
+
 
 ---
 
