Added dark-mode logic to entire web

--- a/src/work/2016-01-01-simform.md
+++ b/src/work/2016-01-01-simform.md
@@ -2,6 +2,7 @@
 title: Building a Multi-Channel Demand Generation Engine for Software Services Company
 meta_title: Simform
 body_class: work
+layout: default
 excerpt: My professional marketing journey began at Simform in October 2017. Over 5 transformative years, I grew from an Inbound Marketing Executive to Demand Generation Lead, scaling digital marketing operations across multiple technology verticals.
 highlightjs: true
 year: Oct 2017 - Sept 2022
