--- a/src/work/2017-10-01-simform.md
+++ b/src/work/2017-10-01-simform.md
@@ -1,16 +1,15 @@
 ---
-title: Building a Multi-Channel Demand Generation Engine for Software Services Company
+title: Building Scalable Demand Generation for Software Development Company
 meta_title: Simform
 body_class: work
-layout: default
-excerpt: My professional marketing journey began at Simform in October 2017. Over 5 transformative years, I grew from an Inbound Marketing Executive to Demand Generation Lead, scaling digital marketing operations across multiple technology verticals.
+excerpt: Joined Simform as Inbound Marketing Executive in October 2017, grew to Demand Generation Lead. Built comprehensive multi-channel marketing engine across technology verticals, drove 3X traffic growth, and successfully launched location-based lead generation strategy.
 highlightjs: true
 year: Oct 2017 - Sept 2022
 client: "Simform"
 industry: "Software Development & IT Services"
 location: "Ahmedabad, India"
 since: "Oct 2017 - Sept 2022"
-tags: ["case-study", "demand-generation", "seo", "content-marketing", "b2b-services"]
+tags: ["case-study", "demand-generation", "b2b-software", "seo"]
 
 story: |
   <p>Simform, a rapidly growing software development company, was at a pivotal moment in its growth trajectory. They had exceptional technical talent and delivered outstanding solutions across multiple technology verticals—but they needed a scalable way to generate consistent, qualified leads in an increasingly competitive market.</p>
@@ -97,6 +96,17 @@ results:
   padding: 40px 20px;
   background: #0E091D;
   min-height: 100vh;
+  overflow-x: hidden;
+}
+
+/* Prevent horizontal scroll globally */
+html, body {
+  overflow-x: hidden;
+  max-width: 100%;
+}
+
+* {
+  max-width: 100%;
 }
 
 /* Hero Section */
@@ -234,10 +244,10 @@ results:
   color: white;
 }
 
-/* Solutions Grid */
+/* Solutions Grid - 2x2 */
 .solutions-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   margin: 40px 0;
 }
@@ -276,16 +286,16 @@ results:
   line-height: 1.6;
 }
 
-/* SWOT Analysis */
+/* SWOT Analysis - 2x2 */
 .swot-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 30px;
   margin: 40px 0;
 }
 
 .swot-item {
-  padding: 30px;
+  padding: 35px;
   border-radius: 15px;
   color: white;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
@@ -320,10 +330,10 @@ results:
   color: rgba(255, 255, 255, 0.95);
 }
 
-/* Strategy & Execution */
+/* Strategy & Execution - 2x2 */
 .strategy-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
   margin: 40px 0;
 }
@@ -356,10 +366,10 @@ results:
   line-height: 1.7;
 }
 
-/* Results Section */
+/* Results Section - 3x2 */
 .results-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   margin: 40px 0;
 }
@@ -398,77 +408,62 @@ results:
   font-weight: 600;
 }
 
-/* CTA Section */
-.case-study-cta {
-  background: linear-gradient(135deg, #EC4899 0%, #B91C1C 100%);
-  color: white;
-  padding: 60px 40px;
-  border-radius: 20px;
-  text-align: center;
-  margin: 80px 0 40px;
-  box-shadow: 0 10px 40px rgba(236, 72, 153, 0.4);
-}
-
-.case-study-cta h2 {
-  font-size: 2.5rem;
-  margin-bottom: 20px;
-  color: white;
-}
-
-.case-study-cta h2::after {
-  display: none;
-}
-
-.case-study-cta p {
-  font-size: 1.25rem;
-  margin-bottom: 30px;
-  opacity: 0.95;
-  color: white;
-}
-
-.cta-buttons {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.cta-button {
-  display: inline-block;
-  padding: 15px 40px;
-  border-radius: 50px;
-  font-weight: bold;
-  font-size: 1.125rem;
-  text-decoration: none;
-  transition: all 0.3s ease;
-}
-
-.cta-button.primary {
-  background: #BF870B;
-  color: white;
-}
-
-.cta-button.primary:hover {
-  background: #D4A017;
-  transform: translateY(-3px);
-  box-shadow: 0 10px 25px rgba(191, 135, 11, 0.4);
-}
-
-.cta-button.secondary {
-  background: transparent;
-  color: white;
-  border: 2px solid white;
-}
-
-.cta-button.secondary:hover {
-  background: white;
-  color: #EC4899;
+/* FIXED: Remove all negative margins on mobile */
+@media (max-width: 640px) {
+  .highlight-yellow {
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
+  }
+  
+  .px-4 {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
+  
+  .gap-4 {
+    gap: 0.75rem !important;
+  }
 }
 
 /* Responsive */
+@media (max-width: 1024px) {
+  .solutions-grid,
+  .swot-grid,
+  .strategy-grid {
+    grid-template-columns: 1fr;
+  }
+  
+  .results-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 @media (max-width: 768px) {
+  .case-study {
+    padding: 20px 15px;
+  }
+  
+  .case-study-hero {
+    padding: 40px 20px;
+  }
+  
   .case-study-hero h1 {
     font-size: 2rem;
+  }
+  
+  .case-study-hero p {
+    font-size: 1.125rem;
+  }
+  
+  .client-info {
+    padding: 30px 20px;
+    gap: 20px;
+  }
+  
+  .story-section {
+    padding: 30px 25px;
   }
   
   .case-study-section h2 {
@@ -476,12 +471,39 @@ results:
   }
   
   .solutions-grid,
+  .swot-grid,
   .strategy-grid,
   .results-grid {
     grid-template-columns: 1fr;
+    gap: 20px;
+  }
+  
+  .solution-item,
+  .swot-item,
+  .strategy-item {
+    padding: 30px 25px;
+  }
+}
+
+@media (max-width: 480px) {
+  .case-study-hero h1 {
+    font-size: 1.75rem;
+  }
+  
+  .case-study-section h2 {
+    font-size: 1.75rem;
+  }
+  
+  .client-info-value {
+    font-size: 1.25rem;
+  }
+  
+  .result-value {
+    font-size: 2rem;
   }
 }
 </style>
+
 
   <!-- Client Information -->
   <div class="client-info">
@@ -594,16 +616,36 @@ results:
   </section>
 
   <!-- CTA Section -->
-  <div class="case-study-cta">
-    <h2>Looking for Proven Marketing Leadership?</h2>
-    <p>Let's discuss how my experience building scalable demand generation systems can accelerate your growth.</p>
-    <div class="cta-buttons">
-      <a href="mailto:rakshitsoral@gmail.com" class="cta-button primary">
-        📧 Get in Touch
-      </a>
-      <a href="https://wa.me/919602542617" class="cta-button secondary">
-        💬 WhatsApp Us
-      </a>
+  <section class="max-w-4xl mx-auto mb-32 px-4 sm:mb-20 w-full">
+    <div class="relative text-center">
+      <h3 class="font-display mb-6 leading-tight sm:text-2xl" style="font-size: 2.3rem; line-height: 1.2;">
+        Looking for <span class="highlight-yellow px-4 inline-block relative sm:px-2">Proven Marketing Leadership?</span>
+      </h3>
+      <p class="text-lg mt-8 mx-auto max-w-3xl sm:text-base sm:mt-6">Let's discuss how my experience building scalable demand generation systems can accelerate your growth.</p><br>
+      
+<div class="flex gap-4 items-center justify-center mb-6 flex-wrap sm:flex-col sm:gap-3">
+        <!-- Email CTA -->
+        <a href="mailto:rakshitsoral@gmail.com" class="group inline-flex items-center gap-3 text-white font-semibold px-8 py-4 rounded-full transform hover:scale-105 transition-all duration-200 shadow-lg hover:shadow-xl sm:w-full sm:justify-center sm:px-6 sm:py-3 sm:text-sm" style="background-color: #1F77C7;">
+          <svg class="w-5 h-5 sm:w-4 sm:h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+            <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"/>
+            <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"/>
+</svg>
+          <span>Get in Touch</span>
+        </a>
+        <!-- WhatsApp CTA -->
+        <a href="https://wa.me/919602542617" target="_blank" rel="noopener noreferrer" class="group inline-flex items-center gap-3 text-white font-semibold px-8 py-4 rounded-full transform hover:scale-105 transition-all duration-200 shadow-lg hover:shadow-xl sm:w-full sm:justify-center sm:px-6 sm:py-3 sm:text-sm" style="background-color: #3eb955;">
+          <svg class="w-5 h-5 sm:w-4 sm:h-4 flex-shrink-0" fill="currentColor" viewBox="0 0 24 24">
+            <path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
+</svg>
+          <span>WhatsApp Us</span>
+        </a>
+      </div>
+  <p class="text-sm flex items-center justify-center gap-2 sm:text-xs opacity-75 flex-wrap px-4">
+        <svg class="w-4 h-4 sm:w-3 sm:h-3 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20" style="color: #3eb955;">
+          <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd"/>
+</svg>
+        <span>See proven strategies from 50+ successful campaigns</span>
+      </p>
     </div>
-  </div>
+  </section>
 </div>
